# prc152emul

./: CMakeCache.txt  CMakeLists.txt  Makefile  clean.sh  cmake_install.cmake
include/: alphabet.hpp  channel.hpp  screen.hpp
src/: CMakeLists.txt  Makefile  PRC152A  alphabet.cpp  cmake_install.cmake  main.cpp  screen.cpp
